@@ -28,6 +28,10 @@ package TestCase {
   our $PACKAGE_VAR_LONG : long;
   our $PACKAGE_VAR_MINIMAL : TestCase::Minimal;
 
+  our $PACKAGE_VAR_INT2 : int;
+  our $PACKAGE_VAR_LONG2 : long;
+  our $PACKAGE_VAR_MINIMAL2 : TestCase::Minimal;
+
   has x_byte : byte;
   has x_short : short;
   has x_int : int;
@@ -66,6 +70,26 @@ package TestCase {
           
           if ($TestCase::PACKAGE_VAR_MINIMAL->get_x == 4) {
             $TestCase::PACKAGE_VAR_MINIMAL = undef;
+            return 1;
+          }
+        }
+      }
+    }
+    return 0;
+  }
+
+  sub package_var_rel_name() : int {
+    if ($PACKAGE_VAR_INT2 == 0) {
+      $PACKAGE_VAR_INT2 = Integer::MAX_VALUE();
+      if ($PACKAGE_VAR_INT2 == Integer::MAX_VALUE()) {
+        $PACKAGE_VAR_LONG2 = Long::MAX_VALUE();
+        if ($PACKAGE_VAR_LONG2 == Long::MAX_VALUE()) {
+          $PACKAGE_VAR_MINIMAL2 = TestCase::Minimal::new();
+          
+          $PACKAGE_VAR_MINIMAL2->set_x(4);
+          
+          if ($PACKAGE_VAR_MINIMAL2->get_x == 4) {
+            $PACKAGE_VAR_MINIMAL2 = undef;
             return 1;
           }
         }
